# stream-monad

./: LICENSE  README.md  hie.yaml  stack.yaml  stream-monad.cabal  streamt.cabal
.github/workflows/: haskell-ci.yml
src/Control/Monad/: Stream.hs
test/: benchmarks.hs  logic.hs  microkanren.hs  test.hs
