Name:          stream-monad
Version:       0.4.0.2
Cabal-Version: >= 1.8
Synopsis:      Simple, Fair and Terminating Backtracking Monad
Description:   This Haskell library provides an implementation of the
               MonadPlus type class that enumerates results of a
               non-deterministic computation by interleaving
               subcomputations in a way that has usually much better
               memory performance than other strategies with the same
               termination properties.
Category:      Control, Monads
License:       BSD3
License-File:  LICENSE
Author:        Oleg Kiselyov, Sebastian Fischer
Maintainer:    Sebastian Fischer (fischer@nii.ac.jp)
Bug-Reports:   http://github.com/sebfisch/stream-monad/issues
Homepage:      http://github.com/sebfisch/stream-monad
Build-Type:    Simple
Stability:     experimental

Extra-Source-Files: README

Library
  Build-Depends:    base >= 3 && < 5,
                    logict >= 0.4,
                    mtl
  HS-Source-Dirs:   src
  Exposed-Modules:  Control.Monad.Stream
  Ghc-Options:      -Wall

Test-suite stream-monad-benchmarks
  Main-Is:          benchmarks.hs
  Build-Depends:    base >= 3 && < 5,
                    criterion >= 0.5,
                    logict >= 0.4,
                    stream-monad
  HS-Source-Dirs:   test
  Type:             exitcode-stdio-1.0

Source-Repository head
  type:     git
  location: git://github.com/sebfisch/stream-monad.git
