name:               streamt
version:            0.4.0.2
cabal-version:      >=1.8
synopsis:           Simple, Fair and Terminating Backtracking Monad
description:
  This Haskell library provides an implementation of the
  MonadPlus type class that enumerates results of a
  non-deterministic computation by interleaving
  subcomputations in a way that has usually much better
  memory performance than other strategies with the same
  termination properties.

category:           Control, Monads
license:            BSD3
license-file:       LICENSE
author:             Oleg Kiselyov, Sebastian Fischer
maintainer:         Sebastian Fischer (fischer@nii.ac.jp)
bug-reports:        http://github.com/davidar/streamt/issues
homepage:           http://github.com/davidar/streamt
build-type:         Simple
stability:          experimental
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.4
   || ==9.0.1

extra-source-files: README

library
  build-depends:
      base    >=3   && <5
    , logict  >=0.4
    , mtl

  hs-source-dirs:  src
  exposed-modules: Control.Monad.Stream
  ghc-options:     -Wall

test-suite streamt-benchmarks
  main-is:        benchmarks.hs
  build-depends:
      base       >=3   && <5
    , criterion  >=0.5
    , logict     >=0.4
    , streamt

  hs-source-dirs: test
  type:           exitcode-stdio-1.0

test-suite streamt-microkanren
  main-is:        microkanren.hs
  build-depends:
      base       >=3   && <5
    , hspec
    , logict     >=0.4
    , mtl
    , streamt

  hs-source-dirs: test
  type:           exitcode-stdio-1.0

test-suite streamt-test
  main-is:        test.hs
  build-depends:
      async        >=2.0
    , base         >=3   && <5
    , logict       >=0.4
    , mtl
    , streamt
    , tasty
    , tasty-hunit

  hs-source-dirs: test
  type:           exitcode-stdio-1.0

source-repository head
  type:     git
  location: git://github.com/davidar/streamt.git
